[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9.0", "setuptools-scm>=8.3.1"]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "monkeytype>=23.3.0"
]
description = "Playground for monkeytype tests"
dynamic = ["version"]
keywords = ["monkeytype"]
name = "monkeytype-sandbox"
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/jevinskie/monkeytype-sandbox"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
preview = true
required-version = ">=0.12.2"
show-fixes = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["I", "PERF", "RUF", "FA", "UP"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "monkeytype_sandbox._version.__version__"}

[tool.setuptools_scm]
version_file = "src/monkeytype_sandbox/_version.py"
